--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -16,6 +16,10 @@
             <i class="fas fa-cart-arrow-down" ></i>
           </div>
           <p class="card-text">{{couponPass.description}}</p>
+          <p *ngIf="couponPass.quantity > 10" class="card-text"> Availability:  <i style="color:#19ff26"> Available</i> </p>
+          <p *ngIf="couponPass.quantity > 4 && couponPass.quantity < 10" class="card-text"> Availability: <i style="color:#f8ff23"> Available, in exhaustion</i></p>
+          <p *ngIf="couponPass.quantity > 0 && couponPass.quantity < 5" class="card-text"> Availability: <i style="color:#FF0000"> Only {{couponPass.quantity}} units available </i></p>
+          <p *ngIf="couponPass.quantity < 1" class="card-text"> Availability: <i style="color:rgba(55,87,85,0.15)"> Not available</i></p>
           <p class="card-text">
             <i class="fas fa-fw  fa-clock text-secondary"></i> {{formatUntil(couponPass.valid_until)}}
 
