--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 offset-1">
+    <div class="col-md-12">
       <div class="card mx-4">
-        <div class="card-body p-4">
+        <div class="card-body px-5">
           <h1 class="text-left">Add new coupon</h1>
           <h4 class="text-muted text-left mb-5">Fill the form:</h4>
 
@@ -56,8 +56,7 @@
                 </div>
 
                 <div class="mt-2">
-                  Progress:
-                  <div class="progress" style="">
+                  <div class="progress">
                     <div class="progress-bar" role="progressbar"
                          [ngStyle]="{ 'width': uploader.progress + '%' }">
                     </div>
@@ -163,7 +162,7 @@
             </div>
             <div class="form group">
               <p>
-                <button class="btn btn-block btn-success">Create Coupon</button>
+                <button class="btn btn-block btn-success btn-create-coupon">Create coupon</button>
               </p>
             </div>
 
