--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -3,15 +3,15 @@
     <div class="col-md-12">
       <div class="card mx-4">
         <div class="card-body px-5">
-          <div>
-            <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:150px" />
+          <div style="float:left; margin-right:4.8em">
+            <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:100px" />
           </div>
           <div>
             <h1 class="text-left">Add new coupon</h1>
             <h6 class="text-muted text-left mb-5">All fields are required</h6>
           </div>
 
-          <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
+          <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()" style="margin-top:30px">
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Title</label>
               <div class="col-sm-10">
