--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
@@ -1,6 +1,7 @@
 .col-form-label{
   color: #20a8d8 !important;
   padding-top: 10px;
+  font-size: 16px;
 }
 
 p{
@@ -27,4 +28,5 @@ div.divDateTime {
   margin: 0 auto;
   padding: 13px;
   width: 40%;
+  font-size:18px;
 }
