--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card mx-4">
-        <div class="card-body px-5">
+        <div class="card-body p-5">
           <div style="float:left; margin-right:4.8em">
             <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:100px"/>
           </div>
