--- a/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
@@ -6,7 +6,9 @@
     <th style="width: 10%">Price</th>
     <th style="width: 10%">Quantity</th>
     <th style="width: 10%">Valid until</th>
+    <th style="width: 5%"> </th>
     <th style="width: 5%"></th>
+    <th style="width: 5%"> </th>
     <th style="width: 5%"></th>
   </tr>
   </thead>
