--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -1,17 +1,81 @@
-<div class="card-block">
-  <div class="row">
-    <div class="card col-md-4 col-sm-6" *ngFor="let coupon of coupons">
-      <img class="card-img-top" [src]="imageUrl(coupon.image)" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">{{coupon.title}}</h5>
-        <p class="card-text">{{coupon.description}}</p>
-      </div>
-      <div class="card-footer">
-        <button type="button" (click)="details(coupon)" class="btn btn-info text-white float-right">Details</button>
-      </div>
+<!--<div class="card-block">-->
+  <!--<div class="row">-->
+    <!--<div class="card col-md-4 col-sm-6" *ngFor="let coupon of coupons">-->
+      <!--<img class="card-img-top" [src]="imageUrl(coupon.image)" alt="Card image cap">-->
+      <!--<div class="card-body">-->
+        <!--<h5 class="card-title">{{coupon.title}}</h5>-->
+        <!--<p class="card-text">{{coupon.description}}</p>-->
+      <!--</div>-->
+      <!--<div class="card-footer">-->
+        <!--<button type="button" (click)="details(coupon)" class="btn btn-info text-white float-right">Details</button>-->
+      <!--</div>-->
 
-      <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
+      <!--<div class="coupon-price">{{formatPrice(coupon.price)}}</div>-->
 
-    </div>
-  </div>
-</div>
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+
+
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th style="width: 40%">Title</th>
+    <th style="width: 10%">Image</th>
+    <th style="width: 10%">Price</th>
+    <th style="width: 10%">Unities</th>
+    <!--<th style="width: 10%">Sold</th>-->
+    <th style="width: 5%"></th>
+    <th style="width: 5%"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <tr *ngFor="let coupon of coupons">
+    <td>
+      <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
+      <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+    </td>
+    <td>
+      <img class="img-thumbnail crop centered-and-cropped"   [src]="imageUrl(coupon.image)" alt="Card image cap">
+    </td>
+    <!--<td>{{coupon.price != 0 ? coupon.price : 'free'}}</td>-->
+    <td>{{formatPrice(coupon.price)}}</td>
+    <td>{{coupon.quantity}}</td>
+    <td>0</td>
+
+
+    <td>
+      <button type="button" (click)="details(coupon)" class="btn btn-info text-white float-right">Details</button>
+    </td>
+    <!--<td>-->
+      <!--<button type="button" class="btn btn-info" (click)="onEdit(coupon)">Edit</button>-->
+    <!--</td>-->
+    <!--<td>-->
+      <!--<button type="button" class="btn btn-danger" (click)="openModal(template)">Delete</button>-->
+
+      <!--<ng-template #template>-->
+        <!--<div class="modal-header">-->
+          <!--<h4 class="modal-title pull-left">Coupon delete</h4>-->
+          <!--<button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">-->
+            <!--<span aria-hidden="true">&times;</span>-->
+          <!--</button>-->
+        <!--</div>-->
+
+        <!--<div class="modal-body">-->
+          <!--Are you sure to delete this coupon? This operation is not reversable!-->
+        <!--</div>-->
+
+        <!--<div class="modal-footer">-->
+          <!--<button type="button" class="btn btn-danger" (click)="decline()">No</button>-->
+          <!--<button type="button" class="btn btn-success" (click)="onDelete(coupon.valueOf().id)">Yes</button>-->
+        <!--</div>-->
+      <!--</ng-template>-->
+    <!--</td>-->
+  </tr>
+
+  </tbody>
+
+</table>
+
