--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 col-sm-6" *ngFor="let coupon of coupons">
       <div class="card">
-        <img class="card-img-top" [src]="imageUrl(coupon.image)" alt="Card image cap">
+        <img class="card-img-top crop centered-and-cropped" [src]="imageUrl(coupon.image)" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{coupon.title}}</h5>
           <p class="card-text">{{coupon.description}}</p>
