--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
@@ -8,3 +8,14 @@
   margin-bottom: 15px;
   margin-top: 15px;
 }
+
+
+.crop {
+  width: 100%;
+  height: 240px;
+  overflow: hidden !important;
+}
+
+.centered-and-cropped {
+   object-fit: cover
+}
