init details payment

--- a/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
@@ -86,7 +86,7 @@
 
   <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-    <button type="button" class="btn btn-success" (click)="buy(cartArray)">Yes</button>
+    <button href="/reserved-area/consumer/cart-detail-payment" type="button" class="btn btn-success" (click)="goToDetailPayment(cartArray)">Yes</button>
   </div>
 </ng-template>
 
