--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -6,9 +6,10 @@
       <th style="width: 10%">Price</th>
       <th style="width: 10%">State</th>
       <th style="width: 10%">Unities</th>
-      <th style="width: 10%">Sold</th>
+      <th style="width: 5%">Sold</th>
       <th style="width: 5%"></th>
       <th style="width: 5%"></th>
+      <th style="width: 5%"> </th>
     </tr>
   </thead>
 
