ADD NEW COUPON updated

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <ul class="list-group sticky-top sticky-offset">
     <!-- Separator with title -->
     <li class="list-group-item sidebar-separator-title text-white d-flex align-items-center menu-collapsed">
-      <small class="font-weight-bold">SIDEBAR</small>
+      <small class="font-weight-bold">MENU</small>
     </li>
     <!-- /END Separator -->
     <!-- Menu with submenu -->
@@ -10,7 +10,7 @@
        class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-start align-items-center">
         <span class="fas fa-archway mr-3"></span>
-        <span class="menu-collapsed">Main menu</span>
+        <span class="menu-collapsed">Contents</span>
         <span class="fas fa-plus ml-auto"></span>
       </div>
     </a>
