--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
@@ -27,6 +27,7 @@ div.divDateTime {
 .btn-create-coupon {
   margin: 0 auto;
   padding: 13px;
-  width: 40%;
+  width: 20%;
   font-size:18px;
+  min-width: 200px;
 }
