--- a/src/app/features/reserved-area/consumer/payment-detail/payment-detail.component.html
+++ b/src/app/features/reserved-area/consumer/payment-detail/payment-detail.component.html
@@ -1,3 +1,52 @@
-<p>
-  payment-detail works!
-</p>
+<div *ngIf="user !== undefined" class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div class="card mx-12" style="padding: 5px">
+        <div class="card-body p-4">
+          <h3 class="card-title">Confirm payment</h3>
+
+          <p class="card-text"><label class="col-form-label col-md-4">Username:</label> <label class="data-user col-md-8">{{user.username}}</label></p>
+          <p class="card-text"><label class="col-md-4 col-form-label">Email:</label><label class="data-user col-md-8"> {{user.email}}</label></p>
+          <p class="card-text"><label class="col-md-4 col-form-label">First name:</label><label class=" data-user col-md-8"> {{user.first_name}}</label></p>
+          <p class="card-text"><label class="col-md-4 col-form-label">Last name:</label><label class="data-user col-md-8"> {{user.last_name}}</label></p>
+          <p class="card-text"><label class="col-md-4 col-form-label">Fiscal code:</label><label class=" data-user col-md-8"> {{user.fiscal_code}}</label></p>
+          <p class="card-text"><label class="col-md-4 col-form-label">Total amount:</label><label class="data-user col-md-8"> {{totalAmount}}</label></p>
+
+          <h5 class="card-text">Coupons to buy:</h5>
+          <div *ngFor="let title of arrayTitle">
+            <p class="card-text"><label class=" data-user col-md-12">{{title}}</label></p>
+          </div>
+          <p class="card-text"><label class="col-md-12"></label></p>
+
+
+          <button class="col-sm-5 btn btn-danger" (click)="retry()">Back to cart</button>
+          <button  class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template)">Buy</button>
+
+          <ng-template #template>
+            <div class="modal-header">
+              <h4 class="modal-title pull-left">Confirm</h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div class="modal-body">
+              <p>Confirm payment?</p>
+
+            </div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" (click)="decline()">No</button>
+              <button type="button" class="btn btn-success" (click)="buy(cartArray)">Yes</button>
+            </div>
+          </ng-template>
+
+
+        </div>
+
+      </div>
+
+
+    </div>
+  </div>
+</div>
