upgade edit and delete with getCouponsCreatedFromToken API

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -52,7 +52,7 @@
 
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-            <button type="button" class="btn btn-success" (click)="onDelete(coupon.valueOf().id)">Yes</button>
+            <button type="button" class="btn btn-success" (click)="onDelete(coupon.token)">Yes</button>
           </div>
         </ng-template>
       </td>
