init user details

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -29,6 +29,9 @@
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">Reports</span>
         </a>
+        <a [routerLink]="['/reserved-area/personal_info']" class="list-group-item list-group-item-action text-white">
+          <span class="menu-collapsed">Personal info</span>
+        </a>
 
       </div>
 
@@ -38,6 +41,9 @@
         </a>
         <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">My purchases</span>
+        </a>
+        <a [routerLink]="['/reserved-area/personal_info']" class="list-group-item list-group-item-action text-white">
+          <span class="menu-collapsed">Personal info</span>
         </a>
       </div>
 
