--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -65,7 +65,7 @@
       <a class="list-group-item list-group-item-action text-secondary">
         <span class="menu-collapsed">Settings</span>
       </a>
-      <a class="list-group-item list-group-item-action text-secondary">
+      <a [routerLink]="['/reserved-area/payment_details']" class="list-group-item list-group-item-action text-white">
         <span class="menu-collapsed">Payment details</span>
       </a>
       <a class="list-group-item list-group-item-action text-secondary">
