--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -4,11 +4,11 @@
       <a *ngIf="item !== 'undefined'" [routerLink]="[item.url]">{{item.label}}</a>
 
     </li>
-    <div *ngIf="breadList[2].label.includes('Consumer')"  class="ml-auto" (click)="viewCart()">
-      <a *ngIf="arrayCart.length === 0">The cart is empty!   </a>
-      <a routerLink="/reserved-area/consumer/cart" *ngIf="arrayCart.length > 0">Go to cart ({{arrayCart.length}})   </a>
+    <div *ngIf="breadList[2].label.includes('Consumer')"  class="ml-auto" (click)="viewCart()" style="margin-right:21px">
+      <a *ngIf="arrayCart.length === 0">Your cart <b class="text-info">is empty</b>! </a>
+      <a routerLink="/reserved-area/consumer/cart" *ngIf="arrayCart.length > 0">There are <b class="text-info">{{arrayCart.length}} items</b> in your cart. Checkout now! </a>
 
-      <i routerLink="/reserved-area/consumer/cart" style="font-size: 1.5em !important;" class="fas fa-cart-arrow-down" ></i>
+      <i routerLink="/reserved-area/consumer/cart" style="font-size: 1.5em !important;" class="fas fa-shopping-cart" ></i>
     </div>
   </ol>
 
